--- a/doc/adoc/gpt_01_overview.adoc
+++ b/doc/adoc/gpt_01_overview.adoc
@@ -1,13 +1,10 @@
-== Обзор
+== Введение
+=== Цель
 
-Разрабатываемый блок подходит для интеграции в микроконтроллеры общего назначения. 
-Обладает рядом особенностей:
-[ul]
-* Конфигурируемое количество пар каналов
-* 32-х разрядный счетчик
-* Наличие регистров предварительной загрузки
-* Наличие схемы выбора источника тактирования для основного счетчика
-* Возможность построения сложных каскадов таймеров для увеличения основания счета
+Разрабатываемый блок подходит для интеграции в микроконтроллеры общего назначения. В основном используется для генерации ШИМ
+сигнала и раного рода прерываний.
+
+=== Базовые функции
 
 Входной канал може работать в режимах:
 [ul]
@@ -20,3 +17,15 @@
 [ul]
 * Генерации ШИМ-сигнала
 * Генерации строба заданной длительности
+
+Блок работает в одном тактовом домене - домене тактового сигнала AXI4-Lite. На входы внешних событий ставятся синхронизаторы.
+=== Параметры конфигурации
+
+|===
+| Параметр     | Значение по умолчанию | Описание                                
+| CH_PAIRS_NUM |            2          | Количество пар каналов (минимум 1 пара) 
+| CNT_WIDTH    |            32         | Разрядность счетчика                    
+| PSC_WIDTH    |            16         | Разрядность предделителя                
+| CSR_WIDTH    |            32         | Ширина memory mapped регистров          
+| WSTRB_WIDTH  |            4          | Ширина сигнала AXI WSTRB                
+|===
