feat(doc): Добавлена Memory Map

--- a/doc/adoc/gpt_04_program_model.adoc
+++ b/doc/adoc/gpt_04_program_model.adoc
@@ -1,1 +1,817 @@
-== Программная модель
+== Memory Map
+
+- Absolute Address: 0x0
+- Base Offset: 0x0
+- Size: 0x38
+
+|===
+|Offset|Identifier|                                                        Name                                                       
+| 0x00 |  TIM_CR1 |                                                Регистр управления №1                                                         
+| 0x04 |  TIM_CR2 |                                                Регистр управления №2                                                          
+| 0x08 | TIM_SMCR |                                                Регистр управления SMC                                                         
+| 0x0C | TIMx_DIER|                                         Регистр разрешения DMA/прерываний                                         
+| 0x10 |  TIMx_SR |                                                  Status register                                                  
+| 0x14 | TIMx_EGR |                                             Event generation register                                             
+| 0x18 |TIMx_CCMR1|                                         Регистр режима захвата/сравнения 1                                        
+| 0x20 | TIMx_CCER|                                          Capture/Compare enable register                                          
+| 0x24 |  TIM_CNT |                                             Регистр основного счетчика                                            
+| 0x28 |  TIM_PSC |                                                Регистр предделителя                                               
+| 0x2C |  TIM_ARR |                                        Регистр автоматической перезагрузки                                        
+| 0x34 | TIM_CCR1 |                                              Регистр захвата/сравнения
+|===
+
+=== TIM_CR1 register
+
+- Absolute Address: 0x0
+- Base Offset: 0x0
+- Size: 0x4
+
+|===
+|Bits|Identifier|Access|Reset|                     Name                    
+|  1 |    CEN   |  rw  |  —  |              Активация счетчика             
+|  2 |    URS   |  rw  |  —  |              Запрет обновления              
+|  3 |    OPM   |  rw  |  —  |             Режим стробирования             
+|  4 |    DIR   |  rw  |  —  |              Направление счета              
+| 6:5|    CMS   |  rw  |  —  |     Выбор режима центрового выравнивания    
+|  7 |   APRE   |  rw  |  —  |           Разрешение предзагрузки           
+| 9:8|    CKD   |  rw  |  —  |Коэффициент деления частоты цифрового фильтра
+|===
+
+==== CEN field
+
+*0:* Счетчик неактивен
+
+*1:* Счетчик активен
+
+==== URS field
+
+*0:* Событие обновления (UEV) может быть сгенерировано любым из способов: 
+
+[ul]
+  * Overflow/Underflow 
+
+  * Установка бита UG 
+
+  * Генерация обновления через контроллер ведомого режима
+
+*1:* UEV может быть сгенерировано только при Overflow/Underflow
+
+==== OPM field
+
+*0:* Счетчик не останавливается при генерации события обновления UEV 
+
+*1:* При генерации события UEV бит CEN устанавливается в 0
+
+==== DIR field
+
+*0:* Счет вверх 
+
+*1:* Счет вниз  
+
+==== CMS field
+
+[ul]
+*00:* Счетчик считает вверх или вниз в зависимости от бита направления DIR
+
+*01:* Счетчик считает по очереди вверх и вниз. Флаги прерывания сравнения счетчика CNT и CCR выставляются, когда счетчик считает вниз  
+
+*10:* Счетчик считает по очереди вверх и вниз. Флаги прерывания сравнения счетчика CNT и CCR выставляются, когда счетчик считает вверх 
+
+*11:* Счетчик считает по очереди вверх и вниз. Флаги прерывания сравнения счетчика CNT и CCR выставляются, когда счетчик считает вверх и вниз
+
+==== APRE field
+
+*0:* Теневой регистр ARR отключен — значение берется напрямую из регистра предварительной загрузки
+
+*1:* Теневой регистр активен
+
+==== CKD field
+
+С помощью этого поля можно управлять формированием отфильтрованного сигнала с частотой F~DTS~,
+
+[ul]
+*00:* F~DTS~ = F~INT~
+
+*01:* F~DTS~ = F~INT~/2
+
+*10:* F~DTS~ = F~INT~/4
+
+*11:* не используется  
+
+=== TIM_CR2 register
+
+- Absolute Address: 0x4
+- Base Offset: 0x4
+- Size: 0x4
+
+|===
+|Bits|  Identifier |Access|Reset|              Name             
+| 2:0| RESERVED_2_0|   r  | 0x0 |               —               
+|  3 |     CCDS    |  rw  |  —  |Выбор DMA для захвата/сравнения
+| 6:4|     MMS     |  rw  |  —  | Выбор режима ведущего таймера 
+|  7 |     TI1S    |  rw  |  —  |           Выбор T11           
+|15:8|RESERVED_15_8|   r  | 0x0 |               —               
+|===
+
+==== CCDS field
+
+*0:* Запрос DMA CCx отправляется при событии CCx
+
+*1:* Запросы DMA CCx отправляются при событии обновления
+
+==== MMS field
+
+Эти биты позволяют выбрать информацию, передаваемую в режиме ведущего таймера для синхронизации ведомых таймеров (TRGO). Комбинации: 
+
+*000:* Сброс - бит UG из регистра TIMx_EGR используется как выход триггера (TRGO). Если сброс генерируется входом триггера (контроллер ведомого режима настроен в режиме сброса), то сигнал на TRGO задерживается относительно фактического сброса.
+
+*001:* Разрешение - сигнал разрешения счетчика CNT_EN используется как выход триггера (TRGO). Полезно для одновременного запуска нескольких таймеров или управления окном, в котором разрешен ведомый таймер.
+
+*010:* Обновление - Событие обновления выбрано как выход триггера (TRGO). Например, ведущий таймер может использоваться как предделитель для ведомого таймера.
+
+*011:* Импульс сравнения - Выход триггера отправляет положительный импульс при установке флага CC11F (даже если он уже был высоким), как только происходит захват или совпадение сравнения.
+
+*100:* Сравнение - Сигнал CC1REF используется как выход триггера (TRGO)
+
+*101:* Сравнение - Сигнал CC2REF используется как выход триггера (TRGO)
+
+*110:* Сравнение - Сигнал CC3REF используется как выход триггера (TRGO)
+
+*111:* Сравнение - Сигнал CC4REF используется как выход триггера (TRGO)
+
+
+==== T11S field
+
+*0:* Вывод TIMx_CH1 подключен ко входу TI1
+
+*1:* Выводы TIMx_CH1, CH2 и CH3 подключены ко входу TI1 (комбинация XOR)
+
+=== TIM_SMCR register
+
+- Absolute Address: 0x8
+- Base Offset: 0x8
+- Size: 0x4
+
+|===
+| Bits|Identifier|Access|Reset|              Name              
+| 2:0 |    SMS   |  rw  |  —  |      Выбор ведомого режима     
+|  3  | RESERVED |   r  | 0x0 |                —               
+| 6:4 |    TS    |  rw  |  —  |         Выбор триггера         
+|  7  |    MSM   |  rw  |  —  |      Режим Ведущий/Ведомый     
+| 11:8|    ETF   |  rw  |  —  |    Фильтр внешнего триггера    
+|13:12|   ETPS   |  rw  |  —  | Предделитель внешнего триггера 
+|  14 |    ECE   |  rw  |  —  |Разрешение внешнего тактирования
+|  15 |    ETP   |  rw  |  —  |  Полярность внешнего триггера  
+|===
+
+==== SMS field
+
+Когда выбраны внешние сигналы, активный фронт сигнала триггера (TRGI) связан с полярностью, выбранной на внешнем входе:
+
+*000:* Ведомый режим отключен - если CEN = '1', то предделитель тактируется непосредственно от внутреннего тактового сигнала.
+
+*001:* Режим энкодера 1 - Счетчик считает вверх/вниз по фронту T11FP1 в зависимости от уровня T12FP2.
+
+*010:* Режим энкодера 2 - Счетчик считает вверх/вниз по фронту T12FP2 в зависимости от уровня T11FP1.
+
+*011:* Режим энкодера 3 - Счетчик считает вверх/вниз по обоим фронтам T11FP1 и T12FP2 в зависимости от уровня другого входа.
+
+*100:* Режим сброса - Фронт выбранного входа триггера (TRGI) переинициализирует счетчик и генерирует обновление регистров.
+
+*101:* Режим стробирования - Тактирование счетчика разрешено, когда вход триггера (TRGI) находится на высоком уровне. Счетчик останавливается (но не сбрасывается), как только триггер переходит на низкий уровень. Контролируются как запуск, так и остановка счетчика.
+
+*110:* Триггерный режим - Счетчик запускается по фронту триггера TRGI (но не сбрасывается). Контролируется только запуск счетчика.
+
+*111:* Режим внешнего тактирования 1 - Фронты выбранного триггера (TRGI) тактируют счетчик.
+
+_Примечание: Режим стробирования не должен использоваться, если выбран T11F_ED в качестве входа триггера (TS=100). Действительно, T11F_ED выдает 1 импульс для каждого перехода на T11F, тогда как режим стробирования проверяет уровень сигнала триггера._
+
+==== TS field
+
+Эта битовая группа выбирает вход триггера для синхронизации счетчика:
+
+*000:* Внутренний триггер 0 (ITR0).
+
+*001:* Внутренний триггер 1 (ITR1).
+
+*010:* Внутренний триггер 2 (ITR2).
+
+*011:* Внутренний триггер 3 (ITR3).
+
+*100:* Детектор фронтов T11 (T11F_ED).
+
+*101:* Фильтрованный вход таймера 1 (T11FP1).
+
+*110:* Фильтрованный вход таймера 2 (T12FP2).
+
+*111:* Внешний вход триггера (ETRF).
+
+_Примечание: Эти биты должны изменяться только когда они не используются (например, когда SMS=000) чтобы избежать некорректного детектирования фронтов во время перехода._
+
+==== MSM field
+
+*0:* Никакого действия.
+
+*1:* Эффект события на входе триггера (TRGI) задерживается для обеспечения идеальной синхронизации между текущим таймером и его ведомыми (через TRGO). Полезно, если необходимо синхронизировать несколько таймеров по одному внешнему событию.
+
+==== ETF field
+
+Эта битовая группа определяет частоту дискретизации сигнала ETRP и длину цифрового фильтра, применяемого к ETRP. Цифровой фильтр состоит из счетчика событий, в котором N последовательных событий необходимо для подтверждения перехода на выходе:
+
+*0000:* Без фильтра, дискретизация на f~DTS~
+
+*0001:* f~SAMPLING~ = f~CK_INT~, N=2
+
+*0010:* f~SAMPLING~ = f~CK_INT~, N=4
+
+*0011:* f~SAMPLING~ = f~CK_INT~, N=8
+
+*0100:* f~SAMPLING~ = f~DTS~/2, N=6
+
+*0101:* f~SAMPLING~ = f~DTS~/2, N=8
+
+*0110:* f~SAMPLING~ = f~DTS~/4, N=6
+
+*0111:* f~SAMPLING~ = f~DTS~/4, N=8
+
+*1000:* f~SAMPLING~ = f~DTS~/8, N=6
+
+*1001:* f~SAMPLING~ = f~DTS~/8, N=8
+
+*1010:* f~SAMPLING~ = f~DTS~/16, N=5
+
+*1011:* f~SAMPLING~ = f~DTS~/16, N=6
+
+*1100:* f~SAMPLING~ = f~DTS~/16, N=8
+
+*1101:* f~SAMPLING~ = f~DTS~/32, N=5
+
+*1110:* f~SAMPLING~ = f~DTS~/32, N=6
+
+*1111:* f~SAMPLING~ = f~DTS~/32, N=8
+
+==== ETPS field
+
+Частота сигнала внешнего триггера ETRP должна быть не более 1/4 частоты CK_INT. Предделитель может быть включен для уменьшения частоты ETRP. Это полезно при подаче быстрых внешних тактовых сигналов
+
+*00:* Предделитель выключен
+
+*01:* Частота ETRP делится на 2
+
+*10:* Частота ETRP делится на 4
+
+*11:* Частота ETRP делится на 8
+
+
+==== ECE field
+
+Этот бит разрешает режим внешнего тактирования 2
+
+0: Режим внешнего тактирования 2 запрещен.
+
+1: Режим внешнего тактирования 2 разрешен. Счетчик тактируется любым активным фронтом сигнала ETRF.
+
+*Примечание 1:* Установка бита ECE имеет тот же эффект, что и выбор внешнего тактирования 1 с подключением TRGI к ETRF (SMS=111 и TS=111).
+
+*Примечание 2:* Возможно одновременное использование внешнего тактирования 2 со следующими ведомыми режимами: режим сброса, режим стробирования и режим триггера. Однако в этом случае TRGI не должен быть подключен к ETRF (биты TS не должны быть 111).
+
+*Примечание 3:* Если одновременно разрешены внешний режим тактирования 1 и внешний режим тактирования 2, входом внешнего тактирования является ETRF.
+
+==== ETP field
+
+Этот бит выбирает полярность сигнала ETR для операций триггера
+
+*0:* ETR неинвертированный, активен по высокому уровню или фронту
+
+*1:* ETR инвертированный, активен по низкому уровню или спаду
+
+=== TIMx_DIER register
+
+- Absolute Address: 0xC
+- Base Offset: 0xC
+- Size: 0x2
+
+Регистр разрешения DMA/прерываний TIMx
+
+|===
+|Bits| Identifier|Access|Reset|    Name   
+|  0 |    UIE    |  rw  |  —  |    UIE    
+|  1 |   CC1IE   |  rw  |  —  |   CC1IE   
+|  2 |   CC2IE   |  rw  |  —  |   CC2IE   
+|  3 |   CC3IE   |  rw  |  —  |   CC3IE   
+|  4 |   CC4IE   |  rw  |  —  |   CC4IE   
+|  5 | reserved_5|   r  | 0x0 | reserved_5
+|  6 |    TIE    |  rw  |  —  |    TIE    
+|  7 | reserved_7|   r  | 0x0 | reserved_7
+|  8 |    UDE    |  rw  |  —  |    UDE    
+|  9 |   CC1DE   |  rw  |  —  |   CC1DE   
+| 10 |   CC2DE   |  rw  |  —  |   CC2DE   
+| 11 |   CC3DE   |  rw  |  —  |   CC3DE   
+| 12 |   CC4DE   |  rw  |  —  |   CC4DE   
+| 13 |reserved_13|   r  | 0x0 |reserved_13
+| 14 |    TDE    |  rw  |  —  |    TDE    
+| 15 |reserved_15|   r  | 0x0 |reserved_15
+|===
+
+==== UIE field
+
+Разрешение прерывания по обновлению
+
+==== CC1IE field
+
+Разрешение прерывания захвата/сравнения 1
+
+==== CC2IE field
+
+Разрешение прерывания захвата/сравнения 2
+
+==== CC3IE field
+
+Разрешение прерывания захвата/сравнения 3
+
+==== CC4IE field
+
+Разрешение прерывания захвата/сравнения 4
+
+==== reserved_5 field
+
+Зарезервирован, должен сохранять значение сброса
+
+==== TIE field
+
+Разрешение прерывания по триггеру
+
+==== reserved_7 field
+
+Зарезервирован, должен сохранять значение сброса
+
+==== UDE field
+
+Разрешение DMA запроса по обновлению
+
+==== CC1DE field
+
+Разрешение DMA запроса захвата/сравнения 1
+
+==== CC2DE field
+
+Разрешение DMA запроса захвата/сравнения 2
+
+==== CC3DE field
+
+Разрешение DMA запроса захвата/сравнения 3
+
+==== CC4DE field
+
+Разрешение DMA запроса захвата/сравнения 4
+
+==== reserved_13 field
+
+Зарезервирован, всегда читается как 0
+
+==== TDE field
+
+Разрешение DMA запроса по триггеру
+
+==== reserved_15 field
+
+Зарезервирован, должен сохранять значение сброса
+
+=== TIMx_SR register
+
+- Absolute Address: 0x10
+- Base Offset: 0x10
+- Size: 0x2
+
+Регистр состояния
+
+|===
+| Bits|  Identifier  |Access|Reset|     Name     
+|  0  |      UIF     |  rw  |  —  |      UIF     
+|  1  |     CC1IF    |  rw  |  —  |     CC1IF    
+|  2  |     CC2IF    |  rw  |  —  |     CC2IF    
+|  3  |     CC3IF    |  rw  |  —  |     CC3IF    
+|  4  |     CC4IF    |  rw  |  —  |     CC4IF    
+|  5  |  reserved_5  |   r  | 0x0 |  reserved_5  
+|  6  |      TIF     |  rw  |  —  |      TIF     
+| 8:7 | reserved_8_7 |   r  | 0x0 | reserved_8_7 
+|  9  |     CC1OF    |  rw  |  —  |     CC1OF    
+|  10 |     CC2OF    |  rw  |  —  |     CC2OF    
+|  11 |     CC3OF    |  rw  |  —  |     CC3OF    
+|  12 |     CC4OF    |  rw  |  —  |     CC4OF    
+|15:13|reserved_15_13|   r  | 0x0 |reserved_15_13
+|===
+
+==== UIF field
+
+Флаг прерывания по обновлению. Устанавливается аппаратно при событии обновления. Сбрасывается программно. 
+
+*0:* Обновления не произошло.
+
+*1:* Ожидает обработки прерывание по обновлению. Устанавливается при: переполнении/антипереполнении (TIM2-TIM5) если UDIS=0; переинициализации CNT программно (UG=1) если URS=0 и UDIS=0; переинициализации CNT событием триггера если URS=0 и UDIS=0.
+
+==== CC1IF field
+
+Флаг прерывания Capture/Compare 1. 
+
+*Выход:* устанавливается аппаратно при совпадении счетчика со значением сравнения. Сбрасывается программно.
+
+*0:* Совпадения нет.
+
+*1:* CNT совпадает с CCR1. 
+
+*Вход:* устанавливается аппаратно при захвате. Сбрасывается программно или чтением CCR1.
+
+*0:* Захват не произошел.
+
+*1:* Значение счетчика захвачено в CCR1.
+
+
+==== CC2IF field
+
+Флаг прерывания Capture/Compare 2 - см. описание CC1IF
+
+==== CC3IF field
+
+Флаг прерывания Capture/Compare 3 - см. описание CC1IF
+
+==== CC4IF field
+
+Флаг прерывания Capture/Compare 4 - см. описание CC1IF
+
+==== reserved_5 field
+
+Зарезервирован, должен сохранять значение сброса
+
+==== TIF field
+
+Флаг прерывания по триггеру. Устанавливается аппаратно при событии триггера (обнаружен активный фронт на входе TRGI когда контроллер ведомого режима включен во всех режимах кроме стробирующего). Устанавливается когда счетчик запускается или останавливается в стробирующем режиме. Сбрасывается программно. 0: Событие триггера не произошло; 1: Ожидает обработки прерывание по триггеру
+
+==== reserved_8_7 field
+
+Зарезервирован, должен сохранять значение сброса
+
+==== CC1OF field
+
+Флаг перезахвата Capture/Compare 1. Устанавливается аппаратно только когда соответствующий канал настроен в режиме захвата по входу. Сбрасывается программно записью '0'. 0: Перезахват не обнаружен; 1: Значение счетчика захвачено в регистр TIMx_CCR1 когда флаг CC1IF уже был установлен
+
+==== CC2OF field
+
+Флаг перезахвата Capture/Compare 2 - см. описание CC1OF
+
+==== CC3OF field
+
+Флаг перезахвата Capture/Compare 3 - см. описание CC1OF
+
+==== CC4OF field
+
+Флаг перезахвата Capture/Compare 4 - см. описание CC1OF
+
+==== reserved_15_13 field
+
+Зарезервирован, должен сохранять значение сброса
+
+=== TIMx_EGR register
+
+- Absolute Address: 0x14
+- Base Offset: 0x14
+- Size: 0x2
+
+Регистр генерации событий
+
+|===
+|Bits|  Identifier |Access|Reset|     Name    
+|  0 |      UG     |  rw  |  —  |      UG     
+|  1 |     CC1G    |  rw  |  —  |     CC1G    
+|  2 |     CC2G    |  rw  |  —  |     CC2G    
+|  3 |     CC3G    |  rw  |  —  |     CC3G    
+|  4 |     CC4G    |  rw  |  —  |     CC4G    
+|  5 |  reserved_5 |   r  | 0x0 |  reserved_5 
+|  6 |      TG     |  rw  |  —  |      TG     
+|15:7|reserved_15_7|   r  | 0x0 |reserved_15_7
+|===
+
+==== UG field
+
+Генерация обновления. Устанавливается программно, автоматически сбрасывается аппаратно.
+
+*0*: Действия нет;
+
+*1*: Реинициализирует счетчик и генерирует обновление регистров. Счетчик предделителя также сбрасывается (коэффициент предделителя не меняется). Счетчик очищается если выбран режим центрального выравнивания или если DIR=0 (счет вверх), иначе принимает значение авто-перезагрузки (TIMx_ARR) если DIR=1 (счет вниз)
+
+==== CC1G field
+
+Генерация Capture/Compare 1. Устанавливается программно для генерации события, автоматически сбрасывается аппаратно.
+
+*0:* Действия нет.
+
+*1:* Событие захвата/сравнения генерируется на канале 1. 
+
+*Выход:* флаг CC1IF устанавливается, отправляется соответствующее прерывание или запрос DMA если разрешены.
+
+*Вход:* текущее значение счетчика захватывается в TIMx_CCR1, устанавливается флаг CC1IF, отправляется соответствующее прерывание или запрос DMA если разрешены, флаг CC1OF устанавливается если флаг CC1IF уже был установлен
+
+==== CC2G field
+
+Генерация Capture/Compare 2 - см. описание CC1G
+
+==== CC3G field
+
+Генерация Capture/Compare 3 - см. описание CC1G
+
+==== CC4G field
+
+Генерация Capture/Compare 4 - см. описание CC1G
+
+==== reserved_5 field
+
+Зарезервирован, должен сохранять значение сброса
+
+==== TG field
+
+Генерация триггера. Устанавливается программно для генерации события, автоматически сбрасывается аппаратно.
+
+*0:* Действия нет.
+
+*1:* Флаг TIF устанавливается в регистре TIMx_SR. Соответствующее прерывание или передача DMA может произойти если разрешены.
+
+==== reserved_15_7 field
+
+Зарезервирован, должен сохранять значение сброса
+
+=== TIMx_CCMR1 register
+
+- Absolute Address: 0x18
+- Base Offset: 0x18
+- Size: 0x4
+
+Каналы могут использоваться в режиме входа (захват) или в режиме выхода (сравнение). Направление канала определяется настройкой соответствующих битов CCxS. 
+Все остальные биты этого регистра имеют разную функцию в режиме входа и выхода. 
+OCxx описывает функцию бита когда канал настроен как выход, ICxx описывает функцию когда канал настроен как вход.
+
+|===
+| Bits|  Identifier |Access|Reset|      Name     
+| 1:0 |     CC1S    |  rw  |  —  |      CC1S     
+|  2  |OC1FE_IC1PSC0|  rw  |  —  |OC1FE/IC1PSC[0]
+|  3  |OC1PE_IC1PSC1|  rw  |  —  |OC1PE/IC1PSC[1]
+| 6:4 |  OC1M_IC1F  |  rw  |  —  | OC1M/IC1F[2:0]
+|  7  | OC1CE_IC1F3 |  rw  |  —  | OC1CE/IC1F[3] 
+| 9:8 |     CC2S    |  rw  |  —  |      CC2S     
+|  10 |OC2FE_IC2PSC0|  rw  |  —  |OC2FE/IC2PSC[0]
+|  11 |OC2PE_IC2PSC1|  rw  |  —  |OC2PE/IC2PSC[1]
+|14:12|  OC2M_IC2F  |  rw  |  —  | OC2M/IC2F[2:0]
+|  15 | OC2CE_IC2F3 |  rw  |  —  | OC2CE/IC2F[3] 
+|===
+
+==== CC1S field
+
+С помощью этого поля происход настройка канала в режим входа или выхода.
+
+*00:* Канал 1 настроен как выход.
+
+*01:* Канал 1 настроен как вход. Вход привязан к выводу TI1.
+
+*10:* Канал 1 настроен как вход. Вход привязан к выводу TI1.
+
+*11:* Канал 1 настроен как вход. Вход привязан к TRC.
+
+==== OC1FE_IC1PSC0 field
+
+Это поле может быть полем OC1FE, с помощью которого можно включить режим быстрого формирования на выходе CC1 — Обычно нужно дождаться совадения CNT и CCR1, 
+но в этом режиме внешний триггер имеет такой же эффект, как и равенство CNT и CCR1, таким образом сигнал на выходе формируется намного быстрее.
+*В другом случае* это поле может быть младшим битом поля IC1PSC.
+
+==== OC1PE_IC1PSC1 field
+
+Если это поле используется как OC1PE, то оно управляет включением или отключением предварительной загрузки регистра CCR1.
+Если канал работает в режиме входа, то это поле является старшим битом поля IC1PSC, которое настраивает коэффициент деления предделителя.
+
+==== OC1M_IC1F field
+
+Данное поле может являться полем для настройки выходного сигнала (OC1M), либо являться младшей частью поля IC1F для настройки фильтра
+
+==== OC1CE_IC1F3 field
+
+В зависимости от режима, в котором работает канал таймера (вход/выход) данное поле может быть:
+*OC1CE* — Сигнал разрешение очистки выходного сигнала с помощью ETRF. 
+
+*IC1F[3]* — Старший бит поля, которое настраивает коэффициент фильтрации для цифрового фильтра на входе TI1.
+
+==== CC2S field
+
+С помощью этого поля происход настройка канала в режим входа или выхода.
+
+*00*: Канал 2 настроен как выход.
+
+*01*: Канал 2 настроен как вход. Вход привязан к выводу TI2.
+
+*10*: Канал 2 настроен как вход. Вход привязан к выводу TI1.
+
+*11*: Канал 2 настроен как вход. Вход привязан к TRC.
+
+==== OC2FE_IC2PSC0 field
+
+Это поле может быть полем OC2FE, с помощью которого можно включить режим быстрого формирования на выходе CC2 — Обычно нужно дождаться совадения CNT и CCR2, 
+но в этом режиме внешний триггер имеет такой же эффект, как и равенство CNT и CCR2, таким образом сигнал на выходе формируется намного быстрее.
+*В другом случае* это поле может быть младшим битом поля IC2PSC.
+
+==== OC2PE_IC2PSC1 field
+
+Если это поле используется как OC2PE, то оно управляет включением или отключением предварительной загрузки регистра CCR2.
+Если канал работает в режиме входа, то это поле является старшим битом поля IC2PSC, которое настраивает коэффициент деления предделителя.
+
+==== OC2M_IC2F field
+
+Данное поле может являться полем для настройки выходного сигнала (OC2M), либо являться младшей частью поля IC2F для настройки фильтра
+
+==== OC2CE_IC2F3 field
+
+В зависимости от режима, в котором работает канал таймера (вход/выход) данное поле может быть:
+
+*OC2CE* — Сигнал разрешение очистки выходного сигнала с помощью ETRF. 
+
+*IC2F[3]* — Старший бит поля, которое настраивает коэффициент фильтрации для цифрового фильтра на входе TI2.
+
+=== TIMx_CCER register
+
+- Absolute Address: 0x20
+- Base Offset: 0x20
+- Size: 0x2
+
+Регистр разрешения захвата/сравнения
+
+|===
+|Bits| Identifier|Access|Reset|    Name   
+|  0 |    CC1E   |  rw  |  —  |    CC1E   
+|  1 |    CC1P   |  rw  |  —  |    CC1P   
+|  2 | reserved_2|   r  | 0x0 | reserved_2
+|  3 |   CC1NP   |  rw  |  —  |   CC1NP   
+|  4 |    CC2E   |  rw  |  —  |    CC2E   
+|  5 |    CC2P   |  rw  |  —  |    CC2P   
+|  6 | reserved_6|   r  | 0x0 | reserved_6
+|  7 |   CC2NP   |  rw  |  —  |   CC2NP   
+|  8 |    CC3E   |  rw  |  —  |    CC3E   
+|  9 |    CC3P   |  rw  |  —  |    CC3P   
+| 10 |reserved_10|   r  | 0x0 |reserved_10
+| 11 |   CC3NP   |  rw  |  —  |   CC3NP   
+| 12 |    CC4E   |  rw  |  —  |    CC4E   
+| 13 |    CC4P   |  rw  |  —  |    CC4P   
+| 14 |reserved_14|   r  | 0x0 |reserved_14
+| 15 |   CC4NP   |  rw  |  —  |   CC4NP   
+|===
+
+==== CC1E field
+
+Разрешение выхода Capture/Compare 1. 
+
+*Выход:*
+[ul]
+* *0:* Выключен - OC1 не активен.
+
+* *1:* Включен - сигнал OC1 выводится на соответствующий вывод. 
+
+*Вход:* определяет возможен ли захват значения счетчика в регистр захвата/сравнения 1 (TIMx_CCR1). 
+[ul]
+* *0:* Захват запрещен. 
+
+* *1:* Захват разрешен.
+
+==== CC1P field
+
+Полярность выхода Capture/Compare 1. 
+
+*Выход:* 
+[ul]
+* *0:* OC1 активный высокий уровень.
+
+* *1:* OC1 активный низкий уровень. 
+
+*Вход:* выбирает полярность TI1FP1 и TI2FP1 для операций триггера или захвата. 
+[ul]
+* *00:* неинвертированный/rising edge. 
+
+* *01:* инвертированный/falling edge. 
+
+* *10:* зарезервировано. 
+
+* *11:* неинвертированный/оба фронта.
+
+==== reserved_2 field
+
+Зарезервирован, должен сохранять значение сброса
+
+==== CC1NP field
+
+Полярность выхода Capture/Compare 1. 
+
+*Выход:* должен оставаться сброшенным. 
+
+*Вход:* используется вместе с CC1P для определения полярности TI1FP1/TI2FP1. 
+[ul]
+* *00:* неинвертированный/фронт rising. 
+
+* *01:* инвертированный/фронт falling. 
+
+* *10:* зарезервировано. 
+
+* *11:* неинвертированный/оба фронта.
+
+
+==== CC2E field
+
+Разрешение выхода Capture/Compare 2 - см. описание CC1E
+
+==== CC2P field
+
+Полярность выхода Capture/Compare 2 - см. описание CC1P
+
+==== reserved_6 field
+
+Зарезервирован, должен сохранять значение сброса
+
+==== CC2NP field
+
+Полярность выхода Capture/Compare 2 - см. описание CC1NP
+
+==== CC3E field
+
+Разрешение выхода Capture/Compare 3 - см. описание CC1E
+
+==== CC3P field
+
+Полярность выхода Capture/Compare 3 - см. описание CC1P
+
+==== reserved_10 field
+
+Зарезервирован, должен сохранять значение сброса
+
+==== CC3NP field
+
+Полярность выхода Capture/Compare 3 - см. описание CC1NP
+
+==== CC4E field
+
+Разрешение выхода Capture/Compare 4 - см. описание CC1E
+
+==== CC4P field
+
+Полярность выхода Capture/Compare 4 - см. описание CC1P
+
+==== reserved_14 field
+
+Зарезервирован, должен сохранять значение сброса
+
+==== CC4NP field
+
+Полярность выхода Capture/Compare 4 - см. описание CC1NP
+
+=== TIM_CNT register
+
+- Absolute Address: 0x24
+- Base Offset: 0x24
+- Size: 0x4
+
+Счетчик разрядностью 32
+
+|===
+|Bits|Identifier|Access|Reset|Name
+|31:0|    CNT   |  rw  |  —  | CNT
+|===
+
+=== TIM_PSC register
+
+- Absolute Address: 0x28
+- Base Offset: 0x28
+- Size: 0x4
+
+Данный регистр является Preload регистром для предделителя. Значение из этого регистра записывается в активный (теневой) регистр, когда происходит событие обновления
+(UEV).
+
+|===
+|Bits|Identifier|Access|Reset|Name
+|31:0|    PSC   |  rw  |  —  | PSC
+|===
+
+=== TIM_ARR register
+
+- Absolute Address: 0x2C
+- Base Offset: 0x2C
+- Size: 0x4
+
+Данный регистр является Preload регистром для теневого регистра ARR.
+
+|===
+|Bits|Identifier|Access|Reset|Name
+|31:0|    ARR   |  rw  |  —  | ARR
+|===
+
+=== TIM_CCR1 register
+
+- Absolute Address: 0x34
+- Base Offset: 0x34
+- Size: 0x4
+
+|===
+|Bits|Identifier|Access|Reset|Name
+|31:0|   CCR1   |  rw  |  —  |CCR1
+|===
