fix(doc): global updates in specification

--- a/doc/adoc/gpt_01_overview.adoc
+++ b/doc/adoc/gpt_01_overview.adoc
@@ -11,7 +11,7 @@
 [ul]
 * Измерения скважности ШИМ сигнала
 * Работать в режиме энкодера
-* Подсчета импульсов из различных источников
+* Подсчета импульсов
 * Измерения частоты сигнала
 
 Выходной канал может работать в режимах:
@@ -20,6 +20,12 @@
 * Генерации строба заданной длительности
 
 Блок работает в одном тактовом домене - домене тактового сигнала AXI4-Lite. На входы внешних событий ставятся синхронизаторы.
+
+=== Особенности
+[ul]
+* Расширяемая карта памяти в зависимости от количества *пар* каналов
+* Возможность тактировать счетчик из разных источников
+* Возможность строить каскады из таймеров, увеличивая основание счета
 
 === Параметры конфигурации
 
