--- a/doc/adoc/gpt_03_signal_list.adoc
+++ b/doc/adoc/gpt_03_signal_list.adoc
@@ -1,34 +1,34 @@
 == Сигналы ввода-вывода
 
 |===
-| Название сигнала | Разрядность      | Описание     
-| aclk_i           | 1                | Тактовый сигнал AXI4-Lite              
-| aresetn_i        | 1                | Сигнал асинхронного сброса 
-| ch_i             | 2 * CH_PAIRS_NUM | Входные каналы таймера     
-| ch_o             | 2 * CH_PAIRS_NUM | Выходные каналы таймера    
-| etr_i            | 1                | Внешнее событие            
-| trg_o            | 1                | Выходной триггер 
-3+| AR
-| arready_i        | 1                | Входной сигнал ready
-| arvalid_o        | 1                | Выходной сигнал valid
-| arradr_i         |                  | Входной адрес чтения
-3+| R
-| rready_i         | 1                | Входной сигнал ready
-| rvalid_o         | 1                | Выходной сигнал valid
-| rdata_i          | 16               | Входные данные
-| rresp_o          | 2                | Сигнал ответа
-3+| AW
-| awvalid_o        | 1                | Входной сигнал valid
-| awready_o        | 1                | Выходной сигнал ready
-| awaddr_i         |                  | Входной адрес записи
-3+| W
-| wvalid_o         | 1                | Выходной сигнал valid 
-| wready_i         | 1                | Входной сигнал ready
-| wdata_i          | 16               | Записываемые данные
-3+| B 
-| bvalid_o         | 1                | 
-| bready_i         | 1                | 
-| bresp_o          | 2                |
+| Название сигнала | Разрядность              | Допустимые значения | Описание     
+| aclk_i           | 1                        | 0, 1                | Тактовый сигнал AXI4-Lite              
+| aresetn_i        | 1                        | 0, 1                | Сигнал асинхронного сброса 
+| ch_i             | [2 * CH_PAIRS_NUM - 1:0] | 1 — inf             | Входные каналы таймера     
+| ch_o             | [2 * CH_PAIRS_NUM - 1:0] | 1 — inf             | Выходные каналы таймера    
+| etr_i            | 1                        | 0, 1                | Внешнее событие            
+| trg_o            | 1                        | 0, 1                | Выходной триггер 
+4+| AR                                           
+| arready_i        | 1                        | 0, 1                | Входной сигнал ready
+| arvalid_o        | 1                        | 0, 1                | Выходной сигнал valid
+| arradr_i         |                          | 0, 1                | Входной адрес чтения
+4+| R                                                                                              
+| rready_i         | 1                        | 0, 1                | Входной сигнал ready
+| rvalid_o         | 1                        | 0, 1                | Выходной сигнал valid
+| rdata_i          | 16                       | 0, 1                | Входные данные
+| rresp_o          | 2                        | 0 — 3               | Сигнал ответа
+4+| AW
+| awvalid_o        | 1                        | 0, 1                | Входной сигнал valid
+| awready_o        | 1                        | 0, 1                | Выходной сигнал ready
+| awaddr_i         |                          | 0, 1                | Входной адрес записи
+4+| W
+| wvalid_o         | 1                        | 0, 1                | Выходной сигнал valid 
+| wready_i         | 1                        | 0, 1                | Входной сигнал ready
+| wdata_i          | 16                       | 0 — MAX             | Записываемые данные
+4+| B 
+| bvalid_o         | 1                        | 0, 1                | Выходной сигнал valid 
+| bready_i         | 1                        | 0, 1                | Входной сигнал ready
+| bresp_o          | 2                        | 0 — 3               | Выходной сигнал ответа
 |===
 
 
