fix: update all

--- a/doc/adoc/gpt_01_overview.adoc
+++ b/doc/adoc/gpt_01_overview.adoc
@@ -2,30 +2,22 @@
 
 === Цель
 
-Разрабатываемый блок подходит для интеграции в микроконтроллеры общего назначения. В основном используется для генерации ШИМ
-сигнала и раного рода прерываний.
+Таймеры общего назначения служат для подсчета событий на своих входах и генерации прерываний.
 
 === Базовые функции
 
-Входной канал може работать в режимах:
-[ul]
-* Измерения скважности ШИМ сигнала
-* Работать в режиме энкодера
-* Подсчета импульсов
-* Измерения частоты сигнала
-
-Выходной канал может работать в режимах:
-[ul]
-* Генерации ШИМ-сигнала
-* Генерации строба заданной длительности
+* Простой счет
+* Генерация прерываний
+* Захват значения счетчика по событию
 
 Блок работает в одном тактовом домене - домене тактового сигнала AXI4-Lite. На входы внешних событий ставятся синхронизаторы.
 
 === Особенности
 [ul]
-* Расширяемая карта памяти в зависимости от количества *пар* каналов
 * Возможность тактировать счетчик из разных источников
 * Возможность строить каскады из таймеров, увеличивая основание счета
+* Расширяемая карта памяти в зависимости от количества *пар* каналов
+
 
 === Параметры конфигурации
 
