--- a/doc/adoc/gpt_04_program_model.adoc
+++ b/doc/adoc/gpt_04_program_model.adoc
@@ -5,23 +5,20 @@
 - Size: 0x44
 
 |===
-|Offset|Identifier|                    Name                    
-| 0x00 |  TIM_CR1 |            Регистр управления №1           
-| 0x04 |  TIM_CR2 |            Регистр управления №2           
-| 0x08 | TIM_SMCR |Регистр управления Master/Slave контроллером
-| 0x0C | TIM_DIER |      Регистр разрешения DMA/прерываний     
-| 0x10 |  TIM_SR  |               Регистр статуса              
-| 0x14 |  TIM_EGR |          Регистр генерации событий         
-| 0x18 | TIM_CCMR1|      Регистр режима захвата/сравнения      
-| 0x1C | TIM_CCMR2|      Регистр режима захвата/сравнения      
-| 0x24 | TIM_CCER |    Регистр разрешения захвата/сравнения    
-| 0x28 |  TIM_CNT |         Регистр основного счетчика         
-| 0x2C |  TIM_PSC |            Регистр предделителя            
-| 0x30 |  TIM_ARR |     Регистр автоматической перезагрузки    
-| 0x34 | TIM_CCR1 |          Регистр захвата/сравнения         
-| 0x38 | TIM_CCR2 |          Регистр захвата/сравнения         
-| 0x3C | TIM_CCR3 |          Регистр захвата/сравнения         
-| 0x40 | TIM_CCR4 |          Регистр захвата/сравнения         
+|Offset                                   |Identifier|                    Name                    
+| 0x00                                    |  TIM_CR1 |            Регистр управления №1           
+| 0x04                                    |  TIM_CR2 |            Регистр управления №2           
+| 0x08                                    | TIM_SMCR |Регистр управления Master/Slave контроллером
+| 0x0C                                    | TIM_DIER |      Регистр разрешения DMA/прерываний     
+| 0x10                                    |  TIM_SR  |               Регистр статуса              
+| 0x14                                    |  TIM_EGR |          Регистр генерации событий             
+| 0x18                                    | TIM_CCER |    Регистр разрешения захвата/сравнения    
+| 0x1C                                    |  TIM_CNT |         Регистр основного счетчика         
+| 0x20                                    |  TIM_PSC |            Регистр предделителя            
+| 0x24                                    |  TIM_ARR |     Регистр автоматической перезагрузки    
+| 0x28 + i * 4, i = [0, CH_PAIRS_NUM * 2] | TIM_CCRi |          Регистр захвата/сравнения         
+| TIM_CCRn + i * 4, i = [1, CH_PAIRS_NUM] | TIM_CCMRi|      Регистр режима захвата/сравнения      
+         
 |===
 
 === TIM_CR1 регистр
